Bug 1319374 - Wrap PaintCounter with ifdef USE_SKIA. r=mchang, a=jcristau